Apply rule "Prefer java.net.URI.toURL()"